examples/bad/06-function_wrong_number_of_arguments.latf
int g(int x) {
    return x + 1;
}

int main() {
    g(); // error
    return 0;
}